--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,6 @@
       "release-type": "simple",
       "package-name": "surrogacy-crm-platform",
       "changelog-path": "CHANGELOG.md",
-      "versioning-strategy": "always-bump-minor",
       "changelog-sections": [
         { "type": "feat", "section": "Features" },
         { "type": "fix", "section": "Bug Fixes" },
@@ -16,7 +15,7 @@
         "README.md"
       ],
       "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": false
+      "bump-patch-for-minor-pre-major": true
     }
   }
 }
