feat: cut over forms APIs to shared intake and identity resume

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -225,6 +225,20 @@ GCP_ERROR_REPORTING_SAMPLE_RATE=1.0
 # RATE_LIMIT_FAIL_OPEN=true  # Use in-memory limiter if Redis is unavailable (set false to fail closed)
 
 # =============================================================================
+# FORMS SHARED INTAKE
+# =============================================================================
+# Enable shared public intake links (/intake/{slug})
+# FORMS_SHARED_INTAKE=true
+# Enable dedicated-link token recipient lock checks (legacy dedicated flow)
+# FORMS_TOKEN_LOCK=true
+# Duplicate detection window for shared submissions (seconds)
+# FORMS_SHARED_DUPLICATE_WINDOW_SECONDS=900
+# Shared draft identity-resume recency window (days)
+# FORMS_SHARED_DRAFT_RESUME_WINDOW_DAYS=30
+# Optional static challenge token for shared submit header X-Intake-Challenge
+# FORMS_SHARED_CHALLENGE_SECRET=
+
+# =============================================================================
 # ANALYTICS CACHE
 # =============================================================================
 # Cache TTL for analytics snapshots (seconds)
